cmake_minimum_required(VERSION 3.22)
project(DSA101_1D_Arrays)

set(CMAKE_CXX_STANDARD 17)

add_executable(DSA101_1D_Arrays main.cpp)
add_executable(DSA101_1D_Arrays_0 Starting-with-1D-Arrays.cpp)
add_executable(DSA101_1D_Arrays_1 Minimum_Maximum_in_Arr.cpp)
add_executable(DSA101_1D_Arrays_2 Linear_Search_1D_Array.cpp)
add_executable(DSA101_1D_Arrays_3 Reverse_Array.cpp)
